kubernetes/ingress/beautybay-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beautybay-ingress
  namespace: beautybay-infrastructure
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: beautybay.local
      http:
        paths:
          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 9000
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 9000
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 9000
