kubernetes/ingress/beautybay-order-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
  namespace: beautybay-order
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
      app: order-service
spec:
  ingressClassName: nginx
  rules:
    - host: beautybay.local
      http:
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 9000
