kubernetes/ingress/beautybay-product-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  namespace: beautybay-product
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: product-service
spec:
  ingressClassName: nginx
  rules:
    - host: beautybay.local
      http:
        paths:
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 9000
