kubernetes/ingress/cart-ingress.yaml
# cart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cart-ingress
  namespace: beautybay-cart  # Use the namespace of the cart service
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: nginx-cart
                port:
                  number: 80
